Test slide with broken XML

--- a/slide/3/slide.html
+++ b/slide/3/slide.html
@@ -1,4 +1,10 @@
 <article>
   <h3>Folie 3</h3>
-  <p>Dies ist Folie 3.</p>
+  <p>Dies ist Folie 3 mit defektem XML.<br>
+  Eine Liste:
+  <ul>
+    <li>Erstens
+    <li>Zweitens
+    <li>Drittens
+  </ul>
 </article>
