Generate slide parameters
slideid (unique id for each slide)
slidenum (number of current slide)

--- a/example/slidetemplate/_templates/default.html
+++ b/example/slidetemplate/_templates/default.html
@@ -1,5 +1,8 @@
-<section>
+<section id="$slideid$">
   <div class="$slideclass$">
     $body$
+  </div>
+  <div class="footer">
+    Slide $slidenum$
   </div>
 </section>
